{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 32,
  "lineage": "446da59f-1f93-22fe-e689-075d6458c14b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07b301a23def3266d",
            "arn": "arn:aws:ec2:ap-south-1:434927108661:instance/i-079009b1c282b5ef7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "portfolio-production-ec2-instance-profile",
            "id": "i-079009b1c282b5ef7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "portfolio-deploy-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0881d76cb692625b9",
            "private_dns": "ip-10-0-1-223.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.223",
            "public_dns": "ec2-3-110-220-126.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.110.220.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08de99412592328c0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a79e7b823e214a59",
            "tags": {
              "Environment": "production",
              "Name": "portfolio-production-backend"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "portfolio-production-backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b40375a46ed61634"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_key_pair.deployer",
            "aws_security_group.alb",
            "aws_security_group.backend",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:434927108661:internet-gateway/igw-06d8cc29695e8b9c5",
            "id": "igw-06d8cc29695e8b9c5",
            "owner_id": "434927108661",
            "tags": {
              "Environment": "production",
              "Name": "portfolio-production-igw"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "portfolio-production-igw"
            },
            "vpc_id": "vpc-044ac50303ec7f4fa"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:434927108661:loadbalancer/app/portfolio-production-alb/a862d0f4a9f252cb",
            "arn_suffix": "app/portfolio-production-alb/a862d0f4a9f252cb",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "portfolio-production-alb-1989953439.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:434927108661:loadbalancer/app/portfolio-production-alb/a862d0f4a9f252cb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "portfolio-production-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f204901c076040d3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06136f3e55d701859"
              },
              {
                "subnet_id": "subnet-0a79e7b823e214a59"
              }
            ],
            "subnets": [
              "subnet-06136f3e55d701859",
              "subnet-0a79e7b823e214a59"
            ],
            "tags": {
              "Environment": "production",
              "Name": "portfolio-production-alb"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "portfolio-production-alb"
            },
            "vpc_id": "vpc-044ac50303ec7f4fa",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:434927108661:listener/app/portfolio-production-alb/a862d0f4a9f252cb/33c5521899acec75",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:434927108661:targetgroup/portfolio-production-tg/fb98a6f403ff5ba9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:434927108661:listener/app/portfolio-production-alb/a862d0f4a9f252cb/33c5521899acec75",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:434927108661:loadbalancer/app/portfolio-production-alb/a862d0f4a9f252cb",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.backend_alb",
            "aws_lb_target_group.backend_tg",
            "aws_security_group.alb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:434927108661:targetgroup/portfolio-production-tg/fb98a6f403ff5ba9",
            "arn_suffix": "targetgroup/portfolio-production-tg/fb98a6f403ff5ba9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/health",
                "port": "5001",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:434927108661:targetgroup/portfolio-production-tg/fb98a6f403ff5ba9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:434927108661:loadbalancer/app/portfolio-production-alb/a862d0f4a9f252cb"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "portfolio-production-tg",
            "port": 5001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "portfolio-production-tg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "portfolio-production-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-044ac50303ec7f4fa"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:434927108661:targetgroup/portfolio-production-tg/fb98a6f403ff5ba9-20260529171246795600000002",
            "port": 5001,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:434927108661:targetgroup/portfolio-production-tg/fb98a6f403ff5ba9",
            "target_id": "i-079009b1c282b5ef7"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.backend",
            "aws_key_pair.deployer",
            "aws_lb_target_group.backend_tg",
            "aws_security_group.alb",
            "aws_security_group.backend",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:434927108661:route-table/rtb-0bbe9fb6e78cd7269",
            "id": "rtb-0bbe9fb6e78cd7269",
            "owner_id": "434927108661",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06d8cc29695e8b9c5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "portfolio-production-public-rt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "portfolio-production-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-044ac50303ec7f4fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c110437d8fea3ec",
            "route_table_id": "rtb-0bbe9fb6e78cd7269",
            "subnet_id": "subnet-0a79e7b823e214a59"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0264deb80ee53acc8",
            "route_table_id": "rtb-0bbe9fb6e78cd7269",
            "subnet_id": "subnet-06136f3e55d701859"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:434927108661:security-group/sg-0f204901c076040d3",
            "description": "Controls access to the Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow outbound to backend instances",
                "from_port": 5001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5001
              }
            ],
            "id": "sg-0f204901c076040d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "portfolio-production-alb-sg",
            "name_prefix": "",
            "owner_id": "434927108661",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "portfolio-production-alb-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "portfolio-production-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-044ac50303ec7f4fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:434927108661:security-group/sg-0b40375a46ed61634",
            "description": "Controls access to the backend EC2 server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b40375a46ed61634",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere for deployment (restricting in production is recommended)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow backend API traffic only from the ALB",
                "from_port": 5001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f204901c076040d3"
                ],
                "self": false,
                "to_port": 5001
              }
            ],
            "name": "portfolio-production-backend-sg",
            "name_prefix": "",
            "owner_id": "434927108661",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "portfolio-production-backend-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "portfolio-production-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-044ac50303ec7f4fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_egress_to_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5001,
            "id": "sgrule-3680811683",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f204901c076040d3",
            "security_group_rule_id": "sgr-09854f9accd2c298a",
            "self": false,
            "source_security_group_id": "sg-0b40375a46ed61634",
            "timeouts": null,
            "to_port": 5001,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.backend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:434927108661:subnet/subnet-0a79e7b823e214a59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a79e7b823e214a59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "434927108661",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "portfolio-production-public-subnet-1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "portfolio-production-public-subnet-1"
            },
            "vpc_id": "vpc-044ac50303ec7f4fa"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:434927108661:subnet/subnet-06136f3e55d701859",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06136f3e55d701859",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "434927108661",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "portfolio-production-public-subnet-2"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "portfolio-production-public-subnet-2"
            },
            "vpc_id": "vpc-044ac50303ec7f4fa"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:434927108661:vpc/vpc-044ac50303ec7f4fa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-003ad0a980adf5d01",
            "default_route_table_id": "rtb-07a4f6c261c684785",
            "default_security_group_id": "sg-0c0d339c7b32d6ab3",
            "dhcp_options_id": "dopt-09c80e78cd9c3515d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-044ac50303ec7f4fa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07a4f6c261c684785",
            "owner_id": "434927108661",
            "tags": {
              "Environment": "production",
              "Name": "portfolio-production-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "portfolio-production-vpc"
            }
          }
        }
      ]
    }
  ]
}